# app/utils/api/types.ts
@@ -15,12 +15,14 @@ export type LevelResponse = Schemas["LevelResponse"];
 export type LogEvent = Schemas["LogEventResponse"];
 export type LogSpan = Schemas["LogSpanResponse"];
 export type LogSpanDetail = Schemas["LogSpanDetailResponse"];
+export type BootResponse = Schemas["BootResponse"];
 
 export type ArtifactPage = Schemas["Page_ArtifactSummaryResponse"];
 export type ArtifactVersionPage = Schemas["Page_ArtifactVersionResponse"];
 export type DownloadPage = Schemas["Page_DownloadResponse"];
 export type LogEventPage = Schemas["Page_LogEventResponse"];
 export type LogSpanPage = Schemas["Page_LogSpanResponse"];
+export type BootList = BootResponse[];
 
 export type ListArtifactsParams = NonNullable<operations["listArtifacts"]["parameters"]["query"]>;
 export type ListVersionsParams = NonNullable<
@@ -29,6 +31,4 @@ export type ListVersionsParams = NonNullable<
 export type ListDownloadsParams = NonNullable<operations["listDownloads"]["parameters"]["query"]>;
 export type ListLogsParams = NonNullable<operations["listLogs"]["parameters"]["query"]>;
 export type ListLogSpansParams = NonNullable<operations["listSpans"]["parameters"]["query"]>;
-export type ListLogTargetsParams = NonNullable<
-  operations["listLogTargets"]["parameters"]["query"]
->;
+export type ListLogTargetsParams = NonNullable<operations["listLogTargets"]["parameters"]["query"]>;
